--- a/public/publications.html
+++ b/public/publications.html
@@ -27,13 +27,13 @@
         <div class="pub">
             Sterling, M. R., Dell, N., Piantella, B., Cho, J., Kaur, H., <b>Tseng, E.</b>, Okeke, F., Brown, M., Leung, P. B. K., Silva, A. F. , Shaw, A. L., Kern, L. M. <br>
             Understanding the Workflow of Home Healthcare for Patients with Heart Failure: Challenges and Opportunities. <br>
-            In Press, Journal of General Internal Medicine.
+            Journal of General Internal Medicine. <a href="https://link.springer.com/article/10.1007/s11606-020-05675-8" target="_blank">online</a>.
         </div>
         
         <div class="pub">
             <b>Emily Tseng</b>, Fabian Okeke, Madeline Sterling, and Nicola Dell.<br>
             "We can learn. Why not?": Designing Technologies to Engender Equity for Home Health Aides.<br>
-            ACM Conference on Human Factors in Computing Systems (CHI 2020). (Acceptance rate 24.3%). To appear.
+            ACM Conference on Human Factors in Computing Systems (CHI 2020). (Acceptance rate 24.3%). <a href="assets/Tseng-2020_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf" target="_blank">pdf</a>.
         </div>
 
         <h2>2019</h2>
