standardizes pdf uploads, updates pubs

--- a/public/publications.html
+++ b/public/publications.html
@@ -25,29 +25,35 @@
     <div class="center" id="publications">
         <h2>2020</h2>
         <div class="pub">
+            Sterling, MR, Dell, N, <b>Tseng, E</b>, Okeke, F, Cho, J, Piantella, B, Tobin, JN. <br>
+            Home Care Workers Caring for Adults with Heart Failure Need Better Access to Training and Technology: A Role for Implementation Science.<br>
+            Journal of Clinical and Translational Science. Forthcoming.
+        </div>
+        <div class="pub">
             Sterling, M. R., Dell, N., Piantella, B., Cho, J., Kaur, H., <b>Tseng, E.</b>, Okeke, F., Brown, M., Leung, P. B. K., Silva, A. F. , Shaw, A. L., Kern, L. M. <br>
-            Understanding the Workflow of Home Healthcare for Patients with Heart Failure: Challenges and Opportunities. <br>
-            Journal of General Internal Medicine. <a href="https://link.springer.com/article/10.1007/s11606-020-05675-8" target="_blank">online</a>.
+            <a href="assets/Sterling-2020-JGIM_Understanding-the-Workflow-of-Home-Health-Care.pdf" target="_blank">Understanding the Workflow of Home Healthcare for Patients with Heart Failure: Challenges and Opportunities.</a> <br>
+            Journal of General Internal Medicine. <a href="Sterling-2020-JGIM_Understanding-the-Workflow-of-Home-Health-Care.pdf">pdf.</a> <a href="https://link.springer.com/article/10.1007/s11606-020-05675-8" target="_blank">online.</a>
         </div>
         
         <div class="pub">
             <b>Emily Tseng</b>, Fabian Okeke, Madeline Sterling, and Nicola Dell.<br>
-            "We can learn. Why not?": Designing Technologies to Engender Equity for Home Health Aides.<br>
-            ACM Conference on Human Factors in Computing Systems (CHI 2020). (Acceptance rate 24.3%). <a href="assets/Tseng-2020_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf" target="_blank">pdf</a>.
+            <a href="assets/Tseng-2020-CHI_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf" target="_blank"></a>"We can learn. Why not?": Designing Technologies to Engender Equity for Home Health Aides.</a><br>
+            ACM Conference on Human Factors in Computing Systems (CHI 2020). (Acceptance rate 24.3%). <a href="assets/Tseng-2020-CHI_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf" target="_blank">pdf.</a> <a href="https://dl.acm.org/doi/abs/10.1145/3313831.3376633" target="_blank">online.</a>
         </div>
 
         <h2>2019</h2>
 
         <div class="pub">
             Diana Freed, Sam Havron, <b>Emily Tseng</b>, Andrea Gallardo, Rahul Chatterjee, Thomas Ristenpart, and Nicola Dell.<br>
-            "Is my phone hacked?" Analyzing Clinical Computer Security Interventions with Survivors of Intimate Partner Violence.<br>Proceedings of the ACM on Human-Computer Interaction: Vol. 3, Issue CSCW, Article 202. 2019. <a href="assets/2019-Freed-CSCW.pdf" target="_blank">pdf.</a><br>
-            <i>Honorable Mention Award</i>
+            <a href="assets/Freed-2019-CSCW_Is-my-phone-hacked.pdf" target="_blank"></a>"Is my phone hacked?" Analyzing Clinical Computer Security Interventions with Survivors of Intimate Partner Violence.</a><br>
+            Proceedings of the ACM on Human-Computer Interaction: Vol. 3, Issue CSCW, Article 202. 2019. <a href="assets/Freed-2019-CSCW_Is-my-phone-hacked.pdf" target="_blank">pdf.</a> <a href="https://dl.acm.org/doi/abs/10.1145/3359304" target="_blank">online.</a> <br>
+            <div class="pub-award"><i>Honorable Mention Award</i></div>
         </div>
 
         <div class="pub">
             Fabian Okeke, <b>Emily Tseng</b>, Benedetta Piantella, Mikaela Brown, Harveen Kaur, Madeline R. Sterling, and Nicola Dell.<br>
-            Technology, Home Health Care, and Heart Failure: A Qualitative Analysis with Multiple Stakeholders.<br>
-            ACM SIGCAS Conference on Computing and Sustainable Societies (COMPASS '19). <a href="assets/2019-HHA-compass.pdf" target="_blank">pdf.</a>
+            <a href="assets/Okeke-2019_COMPASS_Technology-Home-Health-Care.pdf" target="_blank"></a>Technology, Home Health Care, and Heart Failure: A Qualitative Analysis with Multiple Stakeholders.</a><br>
+            ACM SIGCAS Conference on Computing and Sustainable Societies (COMPASS '19). <a href="assets/Okeke-2019_COMPASS_Technology-Home-Health-Care.pdf" target="_blank">pdf.</a> <a href="https://dl.acm.org/doi/10.1145/3314344.3332487" target="_blank">online.</a>
         </div>
 
     </div>
