--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <b>latest</b>
         <ul>
             <li>I am a TA for INFO 6940: Technology and Social Justice with Prof. Nicki Dell this spring at Cornell Tech.</li>
-            <li>Our paper <a href="assets/Tseng-2020_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf"><i>"We can learn. Why not?": Designing Technologies to Engender Equity for Home Health Aides</i></a> was accepted to <a href="https://chi2020.acm.org/">CHI 2020</a>. Mahalo to our participants and collaborators. See you in Honolulu!</li>
+            <li>Our paper <a href="assets/Tseng-2020_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf"><i>"We can learn. Why not?": Designing Technologies to Engender Equity for Home Health Aides</i></a> was accepted to <a href="https://chi2020.acm.org/">CHI 2020</a>. Mahalo to our participants and collaborators!</li>
             <li>I was a TA for <a href="https://sites.google.com/view/hci2019">CS 5682/INFO 6410: HCI & Design</a> in the fall of 2019 at Cornell Tech.</li>
             <li>Our paper <a href="/assets/2019-Freed-CSCW.pdf"><i>"Is my phone hacked?" Analyzing Clinical Computer Security Interventions with Survivors of Intimate Partner Violence</i></a> won a Best Paper Honorable Mention at <a href="http://cscw.acm.org/2019/">CSCW 2019</a>. Thanks, Austin!</li>
             <!-- <li>Our paper <a href="/assets/2019-HHA-compass.pdf"><i>Technology, Home Health Care, and Heart Failure: A Qualitative Analysis with Multiple Stakeholders</i></a> was accepted and presented at <a href="http://acmcompass.org/">COMPASS 2019</a>. Thank you Accra!</li> -->
