--- a/public/index.html
+++ b/public/index.html
@@ -14,58 +14,64 @@
 </head>
 
 <body>
-    <div id="header">
-        <h1>Hi! I'm Emily.</h1>
-        <div id="tabs">
-            <a href="/index.html" class="clicked">ABOUT</a>
-            <a href="/publications.html">PUBLICATIONS</a>
-            <a href="assets/EmilyTseng_CV.pdf" target="_blank">CV</a>
+    <div id="wrapper">
+        <div id="header">
+            <h1>Hi! I'm Emily.</h1>
+            <div id="tabs">
+                <a href="/index.html" class="clicked">ABOUT</a>
+                <a href="/publications.html">PUBLICATIONS</a>
+                <a href="assets/EmilyTseng_CV.pdf" target="_blank">CV</a>
+            </div>
         </div>
-    </div>
-    <div class="quadrant" id="about-text">
-        <p>
-            I'm a first-year Ph.D. student in the department of Information Science at Cornell University, based in NYC
-            at
-            Cornell Tech. I work with Deborah Estrin, Nicola Dell and many others on the design and development of
-            technologies that improve wellbeing for underserved communities. Specific problems that compel me include
-            the
-            potential for language processing methods to change how we conceptualize mental & behavioral wellbeing, the
-            need
-            for technology design frameworks that work for and not in spite of marginalized people, and the
-            possibilities of
-            privacy-preserving machine learning.
-        </p>
-        <p>
-            I earned a B.A. from Princeton University and an M.S. from Cornell Tech. In previous lives I made radio,
-            print
-            and multimedia journalism, developed mathematical models for disease spread and ran early-stage product
-            development at a tech startup. I've also worked as a healthcare consultant in the U.S. and taught software
-            engineering. Drop me a line -- I'm always interested in meeting new people.</p>
-    </div>
-    </div>
-    <div class="quadrant" id="about-photo">
-        <img id="profile-photo" src="assets/profile-18.jpg" alt="Emily in a leather jacket, smiling" />
-    </div>
-    <div class="quadrant" id="latest">
-        <b>latest</b>
-        <ul>
-            <li>I am a TA for INFO 6940: Technology and Social Justice with Prof. Nicki Dell this spring at Cornell Tech.</li>
-            <li>Our paper <a href="assets/Tseng-2020_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf"><i>"We can learn. Why not?": Designing Technologies to Engender Equity for Home Health Aides</i></a> was accepted to <a href="https://chi2020.acm.org/">CHI 2020</a>. Mahalo to our participants and collaborators!</li>
-            <li>I was a TA for <a href="https://sites.google.com/view/hci2019">CS 5682/INFO 6410: HCI & Design</a> in the fall of 2019 at Cornell Tech.</li>
-            <li>Our paper <a href="/assets/2019-Freed-CSCW.pdf"><i>"Is my phone hacked?" Analyzing Clinical Computer Security Interventions with Survivors of Intimate Partner Violence</i></a> won a Best Paper Honorable Mention at <a href="http://cscw.acm.org/2019/">CSCW 2019</a>. Thanks, Austin!</li>
-            <!-- <li>Our paper <a href="/assets/2019-HHA-compass.pdf"><i>Technology, Home Health Care, and Heart Failure: A Qualitative Analysis with Multiple Stakeholders</i></a> was accepted and presented at <a href="http://acmcompass.org/">COMPASS 2019</a>. Thank you Accra!</li> -->
-        </ul>
-    </div>
-    <div class="quadrant" id="contact">
-        <b>contact me</b>
-        <br /><br />
-        Email is best. You can reach me at et397 at cornell dot edu.
-        <br /><br />
-        I also <a href="https://twitter.com/emtseng">tweet</a> sometimes, and you can add me on <a
-            href="https://www.linkedin.com/in/emily-tseng-56aa2a52/">LinkedIn</a> if you'd like.
-    </div>
-    <div class="quadrant footer">
-        This is an intentionally simple website&mdash;mostly plaintext and straight HTML&mdash;to facilitate accessibility. To read more, visit my GitHub. &copy; 2020 Emily Tseng.
+        <div class="quadrant" id="about-text">
+            <p>
+                I'm a first-year Ph.D. student in the department of Information Science at Cornell University, based in
+                NYC
+                at
+                Cornell Tech. I work with Deborah Estrin, Nicola Dell and many others on the design and development of
+                technologies that improve wellbeing for underserved communities. Specific problems that compel me
+                include
+                the
+                potential for language processing methods to change how we conceptualize mental & behavioral wellbeing,
+                the
+                need
+                for technology design frameworks that work for and not in spite of marginalized people, and the
+                possibilities of
+                privacy-preserving machine learning.
+            </p>
+            <p>
+                I earned a B.A. from Princeton University and an M.S. from Cornell Tech. In previous lives I made radio,
+                print
+                and multimedia journalism, developed mathematical models for disease spread and ran early-stage product
+                development at a tech startup. I've also worked as a healthcare consultant in the U.S. and taught
+                software
+                engineering. Drop me a line -- I'm always interested in meeting new people.</p>
+        </div>
+        <div class="quadrant" id="about-photo">
+            <img id="profile-photo" src="assets/profile-18.jpg" alt="Emily in a leather jacket, smiling" />
+        </div>
+        <div class="quadrant" id="latest">
+            <b>latest</b>
+            <ul>
+                <li>I was a TA for Prof. Nicki Dell's <a href="https://sites.google.com/view/info6940sp2020">INFO 6940: Technology and Social Justice</a> in the spring of 2020 at Cornell Tech.</li>
+                <li>Our paper <a href="assets/Tseng-2020-CHI_Designing-to-Engender-Equity-for-Home-Health-Aides.pdf"><i>"We can learn. Why not?": Designing Technologies to Engender Equity for Home Health Aides</i></a> was accepted to <a href="https://chi2020.acm.org/">CHI 2020</a>. Mahalo to our participants and collaborators!</li>
+                <li>I was a TA for <a href="https://sites.google.com/view/hci2019">CS 5682/INFO 6410: HCI & Design</a> in the fall of 2019 at Cornell Tech.</li>
+                <li>Our paper <a href="assets/Freed-2019-CSCW_Is-my-phone-hacked.pdf"><i>"Is my phone hacked?" Analyzing Clinical Computer Security Interventions with Survivors of Intimate Partner Violence</i></a> won a Best Paper Honorable Mention at <a href="http://cscw.acm.org/2019/">CSCW 2019</a>. Thanks, Austin!</li>
+                <!-- <li>Our paper <a href="/assets/2019-HHA-compass.pdf"><i>Technology, Home Health Care, and Heart Failure: A Qualitative Analysis with Multiple Stakeholders</i></a> was accepted and presented at <a href="http://acmcompass.org/">COMPASS 2019</a>. Thank you Accra!</li> -->
+            </ul>
+        </div>
+        <div class="quadrant" id="contact">
+            <b>contact me</b>
+            <br /><br />
+            Email is best. You can reach me at et397 at cornell dot edu.
+            <br /><br />
+            I also <a href="https://twitter.com/emtseng">tweet</a> sometimes, and you can add me on <a
+                href="https://www.linkedin.com/in/emily-tseng-56aa2a52/">LinkedIn</a> if you'd like.
+        </div>
+        <div class="quadrant footer">
+            This is an intentionally simple website&mdash;mostly plaintext and straight HTML&mdash;to facilitate
+            accessibility. To read more, visit my GitHub. &copy; 2020 Emily Tseng.
+        </div>
     </div>
 </body>
 
